--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "axios": "^1.12.2",
     "expo": "54.0.13",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.9.2"
   },
   "private": true
