--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^7.7.1",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "expo": "54.0.13",
     "expo-status-bar": "~3.0.8",
