--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/drawer": "^7.7.1",
     "@react-navigation/native": "^7.1.18",
@@ -19,6 +21,7 @@
     "axios": "^1.12.2",
     "expo": "54.0.13",
     "expo-status-bar": "~3.0.8",
+    "formik": "^2.4.9",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.1.0",
@@ -32,7 +35,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
