--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "expo": "54.0.13",
+    "expo-camera": "~17.0.9",
     "expo-status-bar": "~3.0.8",
     "formik": "^2.4.9",
     "nativewind": "^4.2.1",
@@ -27,9 +28,11 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
