--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "axios": "^1.12.2",
     "expo": "54.0.13",
     "expo-camera": "~17.0.9",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.6.0",
     "formik": "^2.4.9",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
