--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "54.0.13",
     "expo-camera": "~17.0.9",
     "expo-location": "~19.0.7",
+    "expo-splash-screen": "^31.0.11",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "formik": "^2.4.9",
