--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.12.2",
     "expo": "54.0.13",
     "expo-camera": "~17.0.9",
+    "expo-font": "~14.0.10",
     "expo-location": "~19.0.7",
     "expo-splash-screen": "^31.0.11",
     "expo-status-bar": "~3.0.8",
